<resources>
    <string name="app_name">Square Puzzle</string>
    <string name="game_over">Game Over</string>
    <string name="highest_score">Highest Score</string>
    <string name="your_score">Your Score</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit</string>
    <string name="start">Start</string>
    <string name="quit">Quit</string>
    <string name="continue_game">Continue</string>
</resources>