<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#252525"
            android:padding="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_12sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_over"
                android:textSize="@dimen/_24sdp"
                android:fontFamily="@font/threedisometric_bold_8myyz"
                android:gravity="center"
                android:textColor="#FF0F00"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="#00FF90"
                android:text="@string/highest_score"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/threedisometric_black_bwppg"
                android:id="@+id/highestScore"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="#ffffff"
                android:text="@string/your_score"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/threedisometric_black_bwppg"
                android:id="@+id/playerScore"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="@dimen/_12sdp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/play_again"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/threedisometric_black_bwppg"
                    android:textColor="#1418f0"
                    android:gravity="center"
                    android:id="@+id/playAgain"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/exit"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/threedisometric_black_bwppg"
                    android:textColor="#FFFF00"
                    android:gravity="center"
                    android:id="@+id/exit"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>