<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.MainActivity"
        android:background="@drawable/background">
        <LinearLayout
            android:id="@+id/btn_view_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <com.haiprj.games.squarepuzzle.ui.widget.GameTextView
                android:id="@+id/continueGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_continue_bg"
                android:fontFamily="@font/threedisometric_black_bwppg"
                android:gravity="center"
                android:text="@string/continue_game"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_24sdp"
                android:visibility="gone"
                />
            <com.haiprj.games.squarepuzzle.ui.widget.GameTextView
                android:id="@+id/startGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_start_bg"
                android:layout_marginBottom="@dimen/_24sdp"
                android:fontFamily="@font/threedisometric_black_bwppg"
                android:gravity="center"
                android:text="@string/start"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                />

            <com.haiprj.games.squarepuzzle.ui.widget.GameTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/quit"
                android:background="@drawable/btn_quit_bg"
                android:fontFamily="@font/threedisometric_black_bwppg"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:id="@+id/quitGame" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
